--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@stripe/react-stripe-js": "^2.1.1",
@@ -25,7 +26,11 @@
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "sass": "^1.63.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0",
+    "yup-phone-lite": "^2.0.1",
+    "zustand": "^4.3.9"
   }
 }
